Create --list-package-definition-text option.

--- a/Changes
+++ b/Changes
@@ -14,6 +14,9 @@ v0.1.xxx
 
       { "default FIG_REMOTE_URL" : "file:///some/path" }
 
+  - New --list-package-definition-text option, which, surprise, gives you the
+    text of the base package.  Useful for looking at published packages.
+
   Bug fixes:
 
   - Warns on ignored --archive/--resource options.
