--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v0.1.xxx
+
+  New features:
+
+  - The output "--help" was getting way too long.  The text that it now emits
+    is non-comprehensive, but it should fit onto a single screen and includes
+    pointers to the new "--options" and "--help-long" options.
+
 v0.1.70.beta.1
 
   Backwards incompatibilities:
