--- a/Changes
+++ b/Changes
@@ -63,9 +63,9 @@ v0.1.xxx
 
       resource http://example.com/whatever* # No globbing, it's a URL.
 
-      resource "some path/files with whitespace *.txt" # Globbing with
-                                                       # whitespace.
-      archive  'would you like them on a boat?.tgz'    # No globbing.
+      resource "would you like them with a goat?.txt" # Globbing with
+                                                      # whitespace.
+      archive  'would you like them on a boat?.tgz'   # No globbing.
 
       # Bad, bad, bad, won't work
       archive  blah'blah"blah      # Can't have quotes in the middle.
@@ -74,6 +74,24 @@ v0.1.xxx
       archive  "whatever\@hatever" # Syntactically valid, but @ not allowed in
                                    # paths.
       resource archive             # "archive" is a keyword; "config" is allowed
+
+  - New --run-command-statement option that allows you to run command
+    statements in unpublished packages.  Say you have a package.fig file in the
+    current directory that looks like
+
+      config default
+        command "echo hello!"
+      end
+
+    If you just run "fig", it will say that there's nothing to do.  It still
+    does that, but you can now get the command to run if you run "fig
+    --run-command-statement".  You can get non-default commands to run using
+    the --config option, e.g. "fig --run-command-statement --config
+    run-chrome":
+
+      config run-chrome
+        command "chrome ..."
+      end
 
   - New grammar statement to allow for future expansion.  Syntax:
 
@@ -94,6 +112,8 @@ v0.1.xxx
 
     is not.  The only valid version right now is 1, but this means that we can
     change the syntax in the future without breaking any existing packages.
+    Actually, you shouldn't start using this statement yet because older
+    versions of fig will choke upon encountering that.
 
   Bug fixes:
 
