--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v0.1.74.beta.3
+
+  - Changes file fix. :[
+
+v0.1.74.beta.2
+
+  - Packaging fix.
+
 v0.1.74.beta.1
 
   Backwards incompatibilities:
