--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v0.1.78.beta.2
+
+  Bug fixes:
+
+  - Doing a --update after a --publish-local doesn't delete the local package.
+
 v0.1.78.beta.1
 
   Backwards incompatibilities:
