--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ v0.1.78.beta.2
   Bug fixes:
 
   - Doing a --update after a --publish-local doesn't delete the local package.
+    Actually, updates handle failed downloads better in general and don't
+    delete local copies of packages.
 
 v0.1.78.beta.1
 
