--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+v0.2.0.beta.x
+
+  Miscellaneous:
+
+  - The restriction on using keywords in names introduced in v0.1.71 has been
+    reversed.  If changes are required to deal with that, there'll just be a
+    new grammar version introduced.
+
 v0.2.0.beta.1
 
   Backwards incompatibilities:
