--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 v0.2.0.beta.2
 
+  Bug fix:
+
+  - Bad variable name with HTTP downloads fixed.
+
   Miscellaneous:
 
   - The restriction on using keywords in names introduced in v0.1.71 has been
@@ -10,7 +14,7 @@ v0.2.0.beta.2
 
   - Fewer stack traces with network errors.
 
-  - Has not fully been tested with Ruby v1.8
+  - Has not fully been tested with Ruby v1.8.
 
 v0.2.0.beta.1
 
